<resources>
    <string name="app_name">Cafe Hub</string>
    <string name="email">E-Posta</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">Parola</string>
    <string name="sign_up_with_spotify">Spotify ile Giriş Yap</string>
    <string name="or_with">\u0020Veya\u0020</string>
    <string name="sign_up">\u0020KAYDOL</string>
    <string name="forgot_password">Parolanızı mı Unuttunuz?</string>
    <string name="enter_your_password">Parolanızı Girin</string>
    <string name="don_t_have_an_account">Hesabınız yok mu?</string>
    <string name="sign_up_with_google">Google ile Giriş Yap</string>
    <string name="login">GİRİŞ YAP</string>
    <string name="name">İsim</string>
    <string name="surname">Soyisim</string>
    <string name="birthdate">Doğum Tarihi</string>
    <string name="send_email">E-POSTA GÖNDER</string>
    <string name="next">Sonraki</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="intro">Etrafındaki kafeleri keşfet!</string>
    <string name="get_advice">Tavsiye Al</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cafe_score">Kafe Puanı</string>
    <string name="title_activity_coupon">CouponActivity</string>
    <string name="send_song_description">1. Spotfiy uygulamasını aç.\n\n2. Eklemek istediğin şarkının yanındaki üç noktaya tıkla.\n\n3. Sırasıyla \'Paylaş\' ve \'Bağlantıyı kopyala\' seçeneklerini seç.\n\n4. Kopyaladığın bağlantıyı sayfadaki kutucuğa yapıştırıp \'Şarkıyı gönder\' butonuna bas.</string>
</resources>